# komorebi-workspace-indicator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT.md  README.md  TASKLIST.md  build.py  config.example.toml  pyproject.toml  requirements.txt  run.py  setup.py  temp_floating.py  test_templates.py
.cursor/rules/: use-zero-based-indicators-internally.mdc
.github/workflows/: build.yml
src/: .gitignore  __init__.py  autostart.py  config.py  floating_window_manager.py  komorebi_client.py  main.py  monitor_manager.py  process_manager.py
tests/: __init__.py  conftest.py  test_config.py
